--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 				<ul class="fa-ul">
 				  	<li><i class="fa-li fa fa-hand-o-right"></i>Research on Doubao Code AI Team for Automated Code Review and Code Fix on internal codebase.</li>
 				  	<li><i class="fa-li fa fa-hand-o-right"></i>Tree Search methods implementation for Doubao Model's Thinking-mode training.</li>
-					<li><i class="fa-li fa fa-hand-o-right"></i>Paper submitted to <a href="https://conf.researchr.org/home/ase-2025" target="_blank">ASE 2025</a>, co-first author. &#127919; </li>
+					<li><i class="fa-li fa fa-hand-o-right"></i>Paper accepted to <a href="https://conf.researchr.org/home/ase-2025" target="_blank">ASE 2025</a>, co-first author. &#127881; </li>
 				</ul>
 			</div>
 		</div>
@@ -247,3 +247,4 @@
 </script>
 </body>
 </html>
+
